Corrected color contrast calculations

--- a/packages/css-foundation/src/colors.css
+++ b/packages/css-foundation/src/colors.css
@@ -151,12 +151,10 @@ body,
 
 [data-variant="surface-1"] {
   --swatch-color: light-dark(var(--color-100), var(--color-800));
-  --border-color: light-dark(var(--color-200), var(--color-700));
 }
 
 [data-variant="surface-2"] {
   --swatch-color: light-dark(var(--color-200), var(--color-700));
-  --border-color: light-dark(var(--color-300), var(--color-600));
 }
 
 [data-variant="neutral"] {
@@ -164,7 +162,6 @@ body,
   --base-c: var(--chroma-neutral);
   --base-h: var(--hue-neutral);
   --swatch-color: light-dark(var(--color-100), var(--color-800));
-  --border-color: light-dark(var(--color-200), var(--color-900));
 }
 
 [data-variant="primary"] {
